--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "@thefirstspine/auth-nest",
-  "version": "2.1.0",
+  "version": "2.4.3",
   "description": "Built on top of @thefirstspine/auth. Provides Nest services & guard.",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  "peerDependencies": {},
   "dependencies": {
     "@nestjs/common": "^10.2.6",
+    "@nestjs/core": "^10.2.6",
     "@thefirstspine/auth": "^2.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.7.0",
+    "@types/node": "^20.7.1",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
-    "rimraf": "^5.0.4",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   },
   "scripts": {
     "build": "rimraf ./lib && tsc -b",
